# spectral-temporal-curriculum-molecular-gaps

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_basic_functionality.py  validate_project.py  validate_project_basic.py
artifacts/: results.json
configs/: default.yaml
notebooks/: exploration.ipynb
results/: results.json
scripts/: evaluate.py  run_eval.py  train.py
src/spectral_temporal_curriculum_molecular_gaps/: __init__.py
src/spectral_temporal_curriculum_molecular_gaps/evaluation/: __init__.py  metrics.py
src/spectral_temporal_curriculum_molecular_gaps/models/: __init__.py  model.py
src/spectral_temporal_curriculum_molecular_gaps/training/: __init__.py  trainer.py
src/spectral_temporal_curriculum_molecular_gaps/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
